<resources>
    <string name="app_name">Squad</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="sign_in">Sign in</string>
    <string name="register">Register</string>
    <string name="welcome">Welcome</string>
    <string name="edit_matches">Edit Matches</string>
    <string name="edit_match">My Match Details</string>
    <string name="time">Time</string>
    <string name="time_lbl_string">Time:</string>
    <string name="date">Date</string>
    <string name="weekly">Weekly</string>
    <string name="even_teams">Even Teams</string>
    <string name="edit_players">Edit Players</string>
    <string name="save_details">Save Details</string>
    <string name="findContact">Find Contact</string>
    <string name="day">Day</string>
    <string name="save_phone_number">Save Phone Number</string>
    <string name="enter_phone_number_and_save">Enter your phone Number and Save....</string>
    <string name="can_you_play">Playing?</string>
</resources>
