<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_matches"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MatchActivity">


    <TextView
        android:text="@string/edit_match"
        android:textSize="32sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="19dp"
        android:id="@+id/tvHeadingEditMatch" />

    <EditText
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:hint="time"
        android:textSize="20sp"
        android:inputType="time"
        android:ems="10"
        android:layout_marginTop="12dp"
        android:id="@+id/etTime"
        android:layout_below="@+id/tvHeadingEditMatch"
        android:layout_alignParentEnd="true" />

    <TextView
        android:text="@string/time_lbl_string"
        android:textSize="20sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="69dp"
        android:id="@+id/tvTimeLbl"
        android:layout_alignBaseline="@+id/etTime"
        android:layout_alignBottom="@+id/etTime"
        android:layout_toStartOf="@+id/etTime" />

    <TextView
        android:text="@string/date"
        android:textSize="20sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etTime"
        android:layout_alignStart="@+id/tvTimeLbl"
        android:id="@+id/tvDateLbl" />

    <EditText
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:hint="@string/date"
        android:inputType="date"
        android:ems="10"
        android:layout_below="@+id/tvTimeLbl"
        android:layout_alignParentEnd="true"
        android:id="@+id/etDate"
        android:layout_toEndOf="@+id/tvTimeLbl" />

    <Switch
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/switchEvenTeams"
        android:layout_alignBottom="@+id/tvEvenTeamsLbl"
        android:layout_alignEnd="@+id/tvHeadingEditMatch"
        android:layout_below="@+id/switchWeekly" />

    <Switch
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/switchWeekly"
        android:layout_below="@+id/etDate"
        android:layout_alignStart="@+id/switchEvenTeams" />

    <TextView
        android:text="@string/even_teams"
        android:textSize="20sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tvEvenTeamsLbl"
        android:layout_below="@+id/switchWeekly"
        android:layout_alignStart="@+id/tvWeeklySwitch" />

    <Button
        android:text="@string/save_details"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="60dp"
        android:id="@+id/btnSaveMatch" />

    <TextView
        android:text="@string/weekly"
        android:textSize="20sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tvWeeklySwitch"
        android:layout_below="@+id/etDate"
        android:layout_alignStart="@+id/tvDateLbl" />

    <Button
        android:text="Edit Players"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btnEditPlayers"
        android:layout_centerVertical="true"
        android:layout_alignEnd="@+id/switchEvenTeams"
        android:layout_alignStart="@+id/tvEvenTeamsLbl" />

</RelativeLayout>
